# ramp-primes

./: .travis.yml  Cargo.toml  README.md  rust-toolchain
examples/: prime.rs  random_number.rs  random_unsigned_integer.rs
src/: lib.rs
