[package]
name = "ramp-primes"
version = "0.4.2"
authors = ["0xAtropine"]
edition = "2018"
description = "A Rust Library For Generating Large Prime and Composite Numbers using ramp with a simplistic interface."
keywords = ["random","primes","ramp","num","math"]
homepage = "https://github.com/0xAtropine/ramp-primes"
repository = "https://github.com/0xAtropine/ramp-primes"
categories = ["cryptography", "science","algorithms"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "0xAtropine/ramp-primes", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.0"
ramp = "0.5.7"
